--- a/index.html
+++ b/index.html
@@ -21,21 +21,10 @@
         </div>
     </header>
     <main>
-        <h1 class="tableTitle">Genesis Interview Homework (UI/UX)</h1>
         <input type="file" id="csv-file" name="files"/>
         <section id="search-wrapper">
-            <table id="search-template" cellpadding="2" cellspacing="0" border="0">
-            </table>
         </section>
-        <section>
-            <div class="metaDiv"><span>Console: </span></div>
-            <table id="main-template" class="display" style="width:100%">
-                <thead>
-                    <tr>
-                        <th>Heading</th>
-                    </tr>
-                </thead>
-            </table>
+        <section id="table-wrapper">
         </section>
     </main>
 </body>
