Add column reordering and begin column visibility toggle

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <title>Genesis Interview Homework</title>
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery.dataTables.min.js"></script>
+    <script src="js/dataTables.colReorder.min.js"></script>
     <script src="js/papaparse.min.js"></script>
     <script src="js/index.js"></script>
 
     <link rel="stylesheet" type="text/css" href="css/jquery.dataTables.css">
+    <link rel="stylesheet" type="text/css" href="css/colReorder.dataTables.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
