Create new methods with event listeners. Add footer callback.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <input type="file" id="csv-file" name="files"/>
         <section id="search-wrapper">
         </section>
+        <a class="toggle-vis" data-column="0">Name</a>
+        <a class="toggle-vis" data-column="1">Name</a>
         <section id="table-wrapper">
         </section>
     </main>
