--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <header class="header">
         <div class="header__text-box">
             <h1 class="heading-primary u-center-text">
-                <span class="heading-primary--main">Genesis Interview Homework (UI/UX)</span>
-                <span class="heading-primary--sub"><h5>Christopher Duerkes</h5></span>
+                <span class="heading-primary--main">Christopher Duerkes</span>
+                <span class="heading-primary--sub"><h5>Warwick, NY</h5></span>
             </h1>
         </div>
     </header>
